--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,8 @@ board = nucleo_h723zg
 board_build.mcu = stm32h723zgt6
 framework = arduino
 lib_deps = 
-	mirs240x/micro_ros_arduino@^2.0.7-humble
+	https://github.com/micro-ROS/micro_ros_platformio
+	# mirs240x/micro_ros_arduino@^2.0.7-humble
 	waspinator/AccelStepper@^1.64
 	frankjoshua/Rosserial Arduino Library@^0.9.1
 	pfeerick/elapsedMillis@^1.0.6
