--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board = nucleo_h723zg
 board_build.mcu = stm32h723zgt6
 framework = arduino
 lib_ldf_mode = chain+
+board_microros_distro = jazzy
+board_microros_transport = serial
 lib_deps = 
 	https://github.com/micro-ROS/micro_ros_platformio
 	# mirs240x/micro_ros_arduino@^2.0.7-humble
